packages/apps/esm-appointments-app/src/header/appointments-header.scss
@use '@carbon/colors';
@use '@carbon/layout';
@use '@carbon/type';
@use '@openmrs/esm-styleguide/src/vars' as *;

.header {
  background-color: $ui-02;
  border: 1px solid $ui-03;
  border-left: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-right: layout.$spacing-03;
}

.rightJustifiedItems {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  justify-content: flex-end;
  margin: 0 layout.$spacing-03;
  row-gap: layout.$spacing-01;
}

.serviceTypeFilter {
  inline-size: clamp(20rem, 36vw, 36rem);
  max-inline-size: calc(100vw - #{layout.$spacing-05});

  :global(.cds--list-box__menu-item),
  :global(.cds--list-box__menu-item__option) {
    block-size: auto;
    min-block-size: 2.5rem;
  }

  :global(.cds--list-box__menu-item__option) {
    display: flex;
    align-items: center;
    overflow: visible;
    padding-block: layout.$spacing-03;
    text-overflow: clip;
    white-space: normal;
  }
}

// Overriding styles for RTL support
html[dir='rtl'] {
  .date-and-location {
    & > svg {
      order: -1;
    }
    & > span:nth-child(2) {
      order: -2;
    }
  }
}

